# ALGO_LAB_5

./: .gitignore  CMakeLists.txt
include/: kmp_functions.hpp
src/: kmp.cpp  kmp_functions.cpp  research.cpp  shift.cpp
test/: CMakeLists.txt  example.cpp  test.cpp
